ensure that the form does not stretch on large screens

--- a/app/styles/contact/Contact.scss
+++ b/app/styles/contact/Contact.scss
@@ -114,6 +114,10 @@
       }
     }
 
+    @media (min-width: 2000px) {
+      width: 30%;
+    }
+
     textarea {
       max-width: 100%;
       min-width: 100%;
